Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-42880

qdoc's 'square bracket' parameters are evaluated too early

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.5.0
    • 5.4.0 Beta
    • Build tools: qdoc
    • None
    • 023adb11acfe7aedfea0d1d8b956c87b3053004c

    Description

      qdoc's link command (\l) allows an optional first argument enclosed in square brackets. This argument is used for narrowing and focusing the search for the link target. The argument should not be evaluated until the generate phase, but it is being evaluated in the prepare phase. This is also a problem when running qdoc in the single-exec mode.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            gbk Martin Smith (Qt)
            gbk Martin Smith (Qt)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes